--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,20 @@
          "outFiles": [
             "${workspaceFolder}/out/**/*.js"
          ]
-      }
+      },
+      {
+         "type": "node",
+         "request": "launch",
+         "name": "Jest Tests",
+         "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
+         "args": ["--runInBand"],
+         "cwd": "${workspaceFolder}",
+         "console": "integratedTerminal",
+         "internalConsoleOptions": "neverOpen",
+         "disableOptimisticBPs": true,
+         "windows": {
+           "program": "${workspaceFolder}/node_modules/jest/bin/jest.js"
+         }
+       }
    ]
 }
