--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "advent-2023",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.10.2"
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   }
 }
